--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "nextra": "latest",
     "nextra-theme-blog": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rss": "^1.2.2",
-    "sharp": "^0.33.2"
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
