--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
         "gray-matter": "^4.0.3",
         "next": "latest",
