--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -9,13 +9,31 @@ on:
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
+    strategy:
+        matrix:
+          node-version: [18]
     steps:
       - uses: actions/checkout@v3
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+            version: 8
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+            node-version: ${{ matrix.node-version }}
+            cache: 'pnpm'
+
       - name: Install Vercel CLI
         run: pnpm add --global vercel@canary
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
