--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "packageManager": "pnpm@8.15.5",
     "scripts": {
         "dev": "next",
         "build": "node ./scripts/gen-rss.js && next build",
